@@ -23,6 +23,15 @@ Summary of important user-visible changes for instrument-control 0.4.0+
 
   ** TCP: add .property access to the object
 
+  ** I2C: 
+     Implement object properties 
+
+     Added overload functions for: 
+        fread
+        fwrite
+        get
+        set
+
   ** insthwinfo: updated to show i2c ports
  
   ** added toolkit manual
